syntax = "proto3";

package smart_power;

option java_package = "com.lighting.service";
option java_multiple_files = true; 
option java_outer_classname = "SmartPublicLightingServiceImpl";

service SmartPublicLightingService {
  rpc AdjustLighting (AdjustLightingRequest) returns (AdjustLightingResponse) {}
  rpc TurnOnAndOffLighting(TurnOnAndOffLightingRequest) returns (TurnOnAndOffLightingResponse) {}
  
}

message AdjustLightingRequest {
  string lightLevel = 1;
  int32 time = 2;
  string location = 3;
}

message AdjustLightingResponse {
  string brightness = 1;
}

message TurnOnAndOffLightingRequest {
 string location = 1;
 bool is_on = 2;
 
  
}

message TurnOnAndOffLightingResponse {
  string message = 1;
  int32 status_code = 2;
  
}